fixing header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-    
+    margin: 0 auto;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
@@ -14,11 +14,31 @@ h1, h2, h3 {
     font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
+h2 {
+    color: #4aaaa5;
+    background-color: white;
+}
+
+.aboutMe {
+    padding: 10px 10px 10px 10px;
+    background-color: #ffffff;
+    border-color: #dddddd;
+    color: #777777;
+    width: 960px;
+    margin: 0 auto;
+    position: relative;
+    top: 125px;
+    margin-bottom: 100px;
+
+}
+
 .mainHeader {
+    position: absolute;
     background-color: #ffffff;
     border-color: #cccccc;
     width: 100%;
-
+    top: 0;
+    left: 0;
 }
 
 #topRight{
@@ -32,22 +52,6 @@ h1, h2, h3 {
     background-color: #4aaaa5;
 }
 
-h2 {
-    color: #4aaaa5;
-    background-color: white;
-}
-
-.aboutMe {
-    padding: 10px 10px 10px 10px;
-    background-color: #ffffff;
-    border-color: #dddddd;
-    color: #777777;
-    width: 960px;
-    margin: 0 auto;
-}
-
-
-
 #image {
     float: left;
     padding: 10px 10px 10px 0px;
@@ -55,4 +59,18 @@ h2 {
 
 hr {
     background-color: #ffffff;
+}
+
+footer {
+    background-color: #666666;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    color: #dddddd;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-size: 10px;
+    text-ali
 }
